--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,10 @@ node_js:
   - node
   - lts/*
 
-install:
-  - SKIP_SETUP=true npm install
-
 script:
-  - npm run lint:styles
-  - npm run lint:js
-  - npm run build:dist
+  - npm run lint
+  - npm run test
+  - npm run build
 
 dist: trusty
 sudo: false
