--- a/package.json
+++ b/package.json
@@ -21,72 +21,110 @@
     "es6",
     "frontend",
     "sass",
-    "less",
     "static",
     "boilerplate",
     "webpack"
   ],
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js",
-    "start:dist": "cross-env NODE_ENV=production webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
-    "setup": "node ./config/site.setup.js",
-    "postinstall": "node ./config/site.setup.js",
-    "lint:js": "./node_modules/.bin/eslint \"src/**/*.js\"",
-    "lint:styles": "stylelint \"src/**/*.scss\"",
-    "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
-    "deploy": "node ./config/site.deploy.js"
+    "start:prod": "cross-env NODE_ENV=production webpack-dev-server --config ./config/webpack.config.js && http-server ./dist -o",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
+    "test": "cross-env NODE_ENV=test node ./config/jest.js --passWithNoTests",
+    "lint": "run-s -c lint:js lint:styles",
+    "lint:js": "eslint src/**/*.js",
+    "lint:styles": "stylelint src/**/*.{css,scss,sass}",
+    "deploy": "node ./config/site.deploy.js",
+    "setup": "node ./config/setup.js"
+  },
+  "dependencies": {
+    "ftp-deploy": "^2.3.3",
+    "normalize.css": "^8.0.1",
+    "reset-css": "^4.0.1",
+    "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "clear": "^0.1.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "core-js": "^3.2.1",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "eslint": "^6.1.0",
+    "dotenv": "^8.1.0",
+    "dotenv-webpack": "^1.7.0",
+    "enquirer": "^2.3.1",
+    "eslint": "^6.2.2",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-loader": "^2.2.1",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-loader": "^3.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "file-loader": "^4.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "http-server": "^0.11.1",
+    "husky": "^3.0.4",
     "image-webpack-loader": "^5.0.0",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "jest": "^24.9.0",
+    "jest-puppeteer": "^4.3.0",
+    "lint-staged": "^9.2.5",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-sass": "^0.4.1",
+    "prettier": "^1.18.2",
+    "puppeteer": "^1.19.0",
     "robotstxt-webpack-plugin": "^6.0.0",
-    "sass-loader": "^7.2.0",
+    "sass-loader": "^7.3.1",
     "sitemap-webpack-plugin": "^0.6.0",
     "style-loader": "^1.0.0",
     "stylelint": "^10.1.0",
+    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
-    "stylelint-scss": "^3.9.3",
+    "stylelint-scss": "^3.10.0",
     "stylelint-webpack-plugin": "^0.10.5",
+    "url-loader": "^2.1.0",
     "webapp-webpack-plugin": "^2.7.1",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.6",
-    "webpack-merge": "^4.2.1",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.2",
     "webpackbar": "^4.0.0"
   },
-  "dependencies": {
-    "chalk": "^2.4.2",
-    "clear": "^0.1.0",
-    "enquirer": "^2.3.1",
-    "figlet": "^1.2.3",
-    "ftp-deploy": "^2.3.3",
-    "jquery": "^3.4.1",
-    "normalize.css": "^8.0.1",
-    "reset-css": "^4.0.1",
-    "sanitize.css": "^11.0.0",
-    "webpack-dev-server": "^3.8.0"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "{src,config}/**/*.js": [
+      "prettier --write",
+      "eslint --max-warnings=0",
+      "git add"
+    ],
+    "src/**/*.{css,scss,sass}": [
+      "prettier --write",
+      "stylelint --fix",
+      "git add"
+    ],
+    "*.{json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
